# mandala

./: .gitignore  ACKNOWLEDGEMENTS.md  Cargo.toml  README.md
examples/: egui-test-bed.rs  generators.rs  piston-preview-components.rs  piston-test-bed.rs
examples/components/: Cargo.toml
examples/components/src/: main.rs
examples/leptos-wasm-test-bed/: Cargo.toml  README.md
examples/leptos-wasm-test-bed/public/: styles.css
examples/leptos-wasm-test-bed/src/: lib.rs  main.rs
examples/piston-preview-components/: Cargo.toml
examples/piston-preview-components/src/: main.rs
examples/piston-test-bed/: Cargo.toml
examples/piston-test-bed/src/: main.rs
mndl-macro/: Cargo.toml
mndl-macro/src/: expr.rs  item.rs  lib.rs
mndl-macro/tests/: circle.rs
mndl-macro/tests/snapshots/: circle__circle-2.snap.new  circle__circle.snap
src/: angle.rs  artboard.rs  chord.rs  epoch.rs  generator.rs  lib.rs  mandala.rs  path.rs  primitives.rs  ray.rs  segment.rs  space.rs  transform.rs  util.rs  vector_valued.rs
src/path/: command.rs  mod.rs  segment.rs  style.rs
src/path/snapshots/: mandala__path__command__command_tests__sample.snap  mandala__path__path_tests__path_d.snap  mandala__path__tests__circle_path.snap  mandala__path__tests__path_flattening-2.snap  mandala__path__tests__path_flattening-3.snap  mandala__path__tests__path_flattening-4.snap  mandala__path__tests__path_flattening.snap  mandala__path__tests__r: 10.14.snap  mandala__path__tests__r: 101.4.snap  mandala__path__tests__r: 106.47.snap  mandala__path__tests__r: 111.54.snap  mandala__path__tests__r: 116.61000000000001.snap  mandala__path__tests__r: 121.68.snap  mandala__path__tests__r: 126.75.snap  mandala__path__tests__r: 131.82.snap  mandala__path__tests__r: 136.89000000000001.snap  mandala__path__tests__r: 141.96.snap  mandala__path__tests__r: 147.03.snap  mandala__path__tests__r: 15.21.snap  mandala__path__tests__r: 152.10000000000002.snap  mandala__path__tests__r: 157.17000000000002.snap  mandala__path__tests__r: 162.24.snap  mandala__path__tests__r: 167.31.snap  mandala__path__tests__r: 172.38.snap  mandala__path__tests__r: 177.45000000000002.snap  mandala__path__tests__r: 182.52.snap  mandala__path__tests__r: 187.59.snap  mandala__path__tests__r: 192.66000000000003.snap  mandala__path__tests__r: 197.73000000000002.snap  mandala__path__tests__r: 20.28.snap  mandala__path__tests__r: 202.8.snap  mandala__path__tests__r: 207.87.snap  mandala__path__tests__r: 212.94.snap  mandala__path__tests__r: 218.01000000000002.snap  mandala__path__tests__r: 223.08.snap  mandala__path__tests__r: 228.15.snap  mandala__path__tests__r: 233.22000000000003.snap  mandala__path__tests__r: 238.29000000000002.snap  mandala__path__tests__r: 243.36.snap  mandala__path__tests__r: 248.43.snap  (+18 more)
src/paths/: arcs.rs  curves.rs  lines.rs  mod.rs  path.rs
src/paths/snapshots/: mandala__paths__arcs__arc_tests__f32-2d-segment-arc-methods.snap  mandala__paths__arcs__arc_tests__f32-2d-segment-arc.snap  mandala__paths__arcs__arc_tests__f32-2d-sweep-arc-methods.snap  mandala__paths__arcs__arc_tests__f32-2d-sweep-arc.snap  mandala__paths__arcs__arc_tests__f32-3d-segment-arc-methods.snap  mandala__paths__arcs__arc_tests__f32-3d-segment-arc.snap  mandala__paths__arcs__arc_tests__f32-3d-sweep-arc-methods.snap  mandala__paths__arcs__arc_tests__f32-3d-sweep-arc.snap  mandala__paths__arcs__arc_tests__f64-3d-segment-arc-methods.snap  mandala__paths__arcs__arc_tests__f64-3d-segment-arc.snap  mandala__paths__arcs__arc_tests__f64-3d-sweep-arc-methods.snap  mandala__paths__arcs__arc_tests__f64-3d-sweep-arc.snap  mandala__paths__curves__curve_tests__f32-2d-CubicCurve.snap  mandala__paths__curves__curve_tests__f32-2d-CubicCurve_VectorValuedFn.snap  mandala__paths__curves__curve_tests__f32-2d-QuadraticCurve.snap  mandala__paths__curves__curve_tests__f32-2d-QuadraticCurve_VectorValuedFn.snap  mandala__paths__curves__curve_tests__f32-3d-CubicCurve_VectorValuedFn.snap  mandala__paths__curves__curve_tests__f32-3d-QuadraticCurve.snap  mandala__paths__curves__curve_tests__f32-3d-QuadraticCurve_VectorValuedFn.snap  mandala__paths__curves__curve_tests__f64-3d-CubicCurve.snap  mandala__paths__curves__curve_tests__f64-3d-CubicCurve_VectorValuedFn.snap  mandala__paths__curves__curve_tests__f64-3d-QuadraticCurve_VectorValuedFn.snap  mandala__paths__lines__line_tests__f32-2d-line-segment.snap  mandala__paths__lines__line_tests__f32-2d-line.snap  mandala__paths__lines__line_tests__f32-3d-line-segment.snap  (+77 more)
src/snapshots/: mandala__generator__generator_tests__generator_snapshot.snap
