[package]
name = "mandala"
description = "Set of utilities for generative radial drawing and layout"
version = "0.2.0"
edition = "2021"
authors = ["a.nvlkv <a.nvlkv@pm.me>"]
keywords = ["generative", "radial", "drawing"]

[dependencies]
const-primes = "0.8.7"
derive_builder = "0.20.0"
euclid = { version = "0.22.10", features = ["mint"] }
lyon_geom = "1.0.5"
ordered-float = { version = "4.0", default-features = false }
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
serde = { version = "1.0.204", optional = true }


[features]
default = ["f64", "serde"]
f32 = []
f64 = []
serde = [
    "euclid/serde",
    "ordered-float/serde",
    "rand/serde",
    "rand_chacha/serde",
    "const-primes/serde",
    "lyon_geom/serialization",
    "dep:serde",
]

[workspace]

[dev-dependencies]
insta = "1.39.0"
piston = "1.0.0"
piston2d-graphics = "0.44.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.85.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
