[package]
name = "mndl-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["parsing", "full"] }
quote = "1.0"
proc-macro2 = "1.0.79"

[dev-dependencies]
mandala = { path = "../" }
insta = "1.39.0"
naga = { version = "22.1.0", features = ["wgsl-in"] }
