[package]
name = "leptos-wasm-test-bed"
version = "0.1.0"
edition = "2021"
authors = ["a.nvlkv <2813794+anvlkv@users.noreply.github.com>"]


[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
mandala = { path = "../.." }
rand = { version = "0.8.5", features = ["small_rng"] }
leptos-use = "0.10.10"


[dev-dependencies]
wasm-bindgen = "0.2.90"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
